objects/ssot__GoalAssignment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssignedByObject__c</fullName>
        <label>Assigned By Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedByRecordId__c</fullName>
        <label>Assigned By Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CompletionPercent__c</fullName>
        <label>Completion Percentage</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DescriptionCodeId__c</fullName>
        <label>Description Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DescriptionCodeObject__c</fullName>
        <label>Description Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GoalAssigneeId__c</fullName>
        <label>Goal Assignee</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GoalAssignmentPriority__c</fullName>
        <label>Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GoalAssignmentStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GoalDefinitionId__c</fullName>
        <label>Goal Definition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GoalType__c</fullName>
        <label>Goal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Goal Assignment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsContinuousGoal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continuous Goal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRecordId__c</fullName>
        <label>Parent Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgressStatus__c</fullName>
        <label>Progress Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StatusDateTime__c</fullName>
        <label>Status Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonText__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetCompletionDate__c</fullName>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668771624_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GoalAssignment_GoalAssigneeId_map_Ac_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>GoalAssignment_GoalAssigneeId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1716668771624_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668773019_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GoalAssignment_ParentRecordId_map_Ca_rel</label>
        <referenceTo>ssot__CarePlan__dlm</referenceTo>
        <relationshipLabel>GoalAssignment_ParentRecordId_map_Ca_rel</relationshipLabel>
        <relationshipName>rel_1716668773019_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668777442_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GoalAssignment_ParentRecordId_map_Ac_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>GoalAssignment_ParentRecordId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1716668777442_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>